--- a/package.json
+++ b/package.json
@@ -5,10 +5,20 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@apollo/server": "^5.0.0",
+    "@as-integrations/express5": "^1.1.2",
+    "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@prisma/client": "^6.17.1",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "graphql": "^16.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -18,6 +28,7 @@
     "@nestjs/testing": "^11.0.0",
     "@nx/eslint": "21.6.5",
     "@nx/eslint-plugin": "21.6.5",
+    "@nx/jest": "21.6.5",
     "@nx/js": "21.6.5",
     "@nx/nest": "21.6.5",
     "@nx/node": "21.6.5",
@@ -27,11 +38,18 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
+    "jest-util": "^30.0.2",
     "nx": "21.6.5",
     "prettier": "^2.6.2",
+    "prima": "^0.0.1",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
