--- a/nx.json
+++ b/nx.json
@@ -37,7 +37,8 @@
       "plugin": "@nx/jest/plugin",
       "options": {
         "targetName": "test"
-      }
+      },
+      "exclude": ["jobber-jobs-e2e/**/*", "apps/jobber-jobs-e2e/**/*"]
     }
   ]
 }
